login button not showing (css fix)

--- a/src/css/Container.css
+++ b/src/css/Container.css
@@ -11,3 +11,9 @@
 	display: flex;
 	flex-direction: column;
 }
+
+@media (max-width: 600px) {
+	.container {
+		padding-bottom: 1rem;
+	}
+}
