--- a/src/css/Sidebar.css
+++ b/src/css/Sidebar.css
@@ -75,5 +75,6 @@
 	}
 	.logout {
 		left: 1rem;
+		bottom: 4rem;
 	}
 }
