--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -22,12 +22,9 @@
 @media (max-width: 600px) {
 	.projects {
 		overflow: auto;
-		padding-right: 0.2rem;
 	}
 	.projectGrid {
 		grid-template-columns: repeat(1, 1fr);
-		/* padding: 0.5rem; */
-		padding-right: 0;
 		gap: 0.2rem;
 		overflow-y: auto;
 	}
